--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">ShiningStar</string>
+    <string name="title_activity_children">Children</string>
+    <string name="title_home">Children</string>
+    <string name="title_dashboard">Add Children</string>
+    <string name="title_notifications">Notifications</string>
 </resources>
